applications/task-tracker-app/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels: 
    istio-injection: enabled
