applications/task-tracker-app/overlays/production/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: argo-combined-app
  labels:
    app: argo-combined-app
spec:
  selector:
    matchLabels:
      app: argo-combined-app
  template:
    metadata:
      labels:
        app: argo-combined-app
        istio-injection: enabled
    spec:
      containers:
      - name: task-tracker-app-ui
        image: foxy7887/task-tracker-app:v1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
  strategy:
    canary:
      canaryService: argo-combined-app-canary
      stableService: argo-combined-app
      trafficRouting:
        istio:
          virtualService:
            name: argo-combined-app
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: {duration: 2m}
      - setWeight: 30
      - pause: {duration: 30s}
      - setWeight: 50
      - pause: {duration: 30s}
      analysis:
        templates:
        - templateName: argo-combined-app
        startingStep: 2
        args:
        - name: service-name
          value: "task-tracker-app-ui.production.svc.cluster.local"
