applications/task-tracker-app/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/healthcheck-path: "/healthz/ready"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/group.name: "alb-demo-group"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/listen-ports: [{"HTTP": 80}, {"HTTPS": 443}]
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
                                        {
                                          "Type": "redirect", 
                                          "RedirectConfig": { 
                                            "Protocol": "HTTPS", 
                                            "Port": "443", 
                                            "StatusCode": "HTTP_301"
                                          }
                                        }
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-west-1:880572800141:certificate/8d87927b-16e5-4952-b191-064cc118305a" 
spec:
  rules:
  - host: mlops-playground.com
    http:
      paths:
      - backend: 
          service:
            name: ssl-redirect
            port: 
              name: use-annotation
        path: /    
        pathType: Prefix 
      - backend:
          service:
            name: istio-ingressgateway
              port:            
                number: 15021        
          path: /healthz/ready        
          pathType: Prefix
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 443
        path: /
        pathType: Prefix
